--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@ visited - How the link should appear after the user has clicked on it. By defaul
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
 
 .btn::after {
-  /* For the after psuedo element to appear, we need to specify the content. Doesnt matter even if it is empty. We need to specify it
+  /* For the after pseudo element to appear, we need to specify the content. Doesn't matter even if it is empty. We need to specify it
    */
   content: "";
   display: inline-block;
