--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,6 +19,9 @@ Note: This SCSS file has been derived from ../css/style.css. ../css/style.css wa
 $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
+
+$color-grey-dark: #777;
+
 *,
 *::after,
 *::before {
@@ -43,7 +46,7 @@ body {
   font-weight: 400;
   font-size: 16;
   line-height: 1.7;
-  color: #777;
+  color: $color-grey-dark;
   /* The body c */
   padding: 4rem;
   box-sizing: border-box;
@@ -199,7 +202,7 @@ visited - How the link should appear after the user has clicked on it. By defaul
 
 .btn--white {
   background-color: white;
-  color: #777;
+  color: $color-grey-dark;
 }
 
 .btn:hover {
@@ -218,7 +221,7 @@ visited - How the link should appear after the user has clicked on it. By defaul
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
 .btn::after {
-  /* For the after psuedo element to appear, we need to specify the content. Doesnt matter even if it is empty. We need to specify it
+  /* For the after pseudo element to appear, we need to specify the content. Doesn't matter even if it is empty. We need to specify it
    */
 
   content: "";
