--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,6 +21,8 @@ $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 
 $color-grey-dark: #777;
+$color-white: #fff;
+$color-black: #000;
 
 *,
 *::after,
@@ -97,7 +99,7 @@ body {
 }
 
 .heading-primary {
-  color: white;
+  color: $color-white;
   text-transform: uppercase;
   /* Sometimes when the animations play, it can be a bit shakey. Setting this property fixes it */
   backface-visibility: hidden;
@@ -212,13 +214,13 @@ visited - How the link should appear after the user has clicked on it. By defaul
   10px - The shadow will be 10 px down
   20px - The blur we will see
   */
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
 }
 
 /* Active is for when you click on the element */
 .btn:active {
   transform: translateY(-1px);
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
 }
 .btn::after {
   /* For the after pseudo element to appear, we need to specify the content. Doesn't matter even if it is empty. We need to specify it
@@ -237,12 +239,12 @@ visited - How the link should appear after the user has clicked on it. By defaul
 }
 
 .btn--white::after {
-  background-color: #fff;
+  background-color: $color-white;
 }
 
 .btn:hover::after {
   transform: scaleX(1.4) scaleY(1.6);
-  /* background: #000; */
+  /* background: #$color-black; */
   opacity: 0;
 }
 
